force-app/main/default/objects/Product2/fields/Product_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Price__c</fullName>
    <label>Product Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>